# agent-365-use-cases

./: README.md
a365-sample-agent/: .gitignore  AGENT-CODE-WALKTHROUGH.md  README.md  a365.config.json  a365.generated.config.json  agent.py  host_agent_server.py  m365agents.playground.yml  m365agents.yml  pyproject.toml  test_agent.py
a365-sample-agent/.claude/: settings.local.json
a365-sample-agent/env/: .env.playground
email-summary-agent/: README.md  email_agent.py  requirements.txt  validation.py
email-summary-agent-with-a365/: .env.example  README.md  a365.config.json  a365.generated.config.json  email_agent_a365.py  outlook_mcp_server.py  requirements.txt
